feat: adiciona novas cores

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -2,6 +2,8 @@
     --vanilla-cream: #FEFAE0;
     --matcha-leaf: #6B705C;
     --black-bean: #000000;
+    --sage-brew: #FEFAE0;
+    --dark-mocha: #554747;
 }
 
 * {
