--- a/frontend/src/components/ProductCarousel/ProductCarousel.module.css
+++ b/frontend/src/components/ProductCarousel/ProductCarousel.module.css
@@ -1,15 +1,34 @@
-.productCarousel {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
+h4 {
+	font-size: 2rem;
+	border-bottom: 1px solid var(--black-bean);
+	display: inline-block;
+	margin: 0 0 1rem 4rem;
 }
 
-.productCarousel h4 {
-    font-size: 2rem;
-}
-
-.productCarouselContainer {
+.carouselWrapper {
+    position: relative;
     display: flex;
-    gap: 3rem;
-    justify-content: center;
+    align-items: center;
+    gap: 10px;
+	margin-top: 1rem;
 }
+  
+  .arrowLeft,
+  .arrowRight {
+    background-color: #ddd;
+    border: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+    cursor: pointer;
+}
+  
+.arrowLeft {
+    margin-right: 10px;
+}
+  
+.arrowRight {
+	margin-left: 10px;
+}
+  
