--- a/frontend/src/components/ProductCarousel/ProductCarousel.module.css
+++ b/frontend/src/components/ProductCarousel/ProductCarousel.module.css
@@ -22,6 +22,9 @@ h4 {
     height: 40px;
     font-size: 20px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
   
 .arrowLeft {
