--- a/frontend/src/components/ProductCarousel/ProductCarousel.module.css
+++ b/frontend/src/components/ProductCarousel/ProductCarousel.module.css
@@ -1,3 +1,9 @@
+.carouselHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 h4 {
 	font-size: 2rem;
 	border-bottom: 1px solid var(--black-bean);
