--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -4,6 +4,10 @@ header {
     align-items: center;
     background-color: var(--vanilla-cream);
     padding: 0.8rem 2rem;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 nav {
