--- a/frontend/src/components/Banner/Banner.module.css
+++ b/frontend/src/components/Banner/Banner.module.css
@@ -32,7 +32,7 @@
     flex-direction: column;
     gap: 2rem;
     width: 50%;
-    color: var(--sage-brew);
+    color: var(--vanilla-cream);
     font-size: 1.2rem;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
     font-weight: 600;
