--- a/frontend/src/components/ProductGrid/ProductGrid.module.css
+++ b/frontend/src/components/ProductGrid/ProductGrid.module.css
@@ -3,4 +3,18 @@
     grid-template-columns: repeat(auto-fill, minmax(185px, 1fr));
     gap: 1rem;
     margin-top: 7rem;
+    min-height: 200px;
+}
+
+.noProductsMessage {
+    grid-column: 1 / -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 2rem;
+    color: #666;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
 }
