feat: adiciona funcionalidade de ao clicar no produto, abrir página de detalhes dele

--- a/frontend/src/components/Card/ProductCard/ProductCard.module.css
+++ b/frontend/src/components/Card/ProductCard/ProductCard.module.css
@@ -10,6 +10,10 @@
     overflow: hidden;
 }
 
+.productCard:hover {
+    cursor: pointer;
+}
+
 .priceTag {
     position: absolute;
     top: 10px;
