feat: adiciona novos tons de cores globais

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -5,6 +5,9 @@
     --dark-mocha: #554747;
     --matcha-moss: #606C38;
     --dusty-matcha: #A5A58D;
+    --wild-drip: #6B705C;
+    --misty-milk: #D9D9D9;
+    --herbal-cream: #A5A58D;
 }
 
 * {
