--- a/frontend/src/components/CartDrawer/CartDrawer.module.css
+++ b/frontend/src/components/CartDrawer/CartDrawer.module.css
@@ -1,8 +1,8 @@
 .drawer {
   position: fixed;
   top: 0;
-  right: -400px;
-  width: 350px;
+  right: -425px;
+  width: 425px;
   height: 100vh;
   background: #fff;
   box-shadow: -2px 0 8px rgba(0,0,0,0.1);
@@ -12,6 +12,8 @@
   display: flex;
   flex-direction: column;
   background-color: var(--vanilla-cream);
+  overflow-y: auto;
+  max-height: 75rem;
 }
 
 .cartDrawerHeader {
@@ -32,6 +34,7 @@
   background-color: var(--latte-caramelo);
   border-radius: 0.5rem;
   padding: 0.5rem 1rem;
+  
 }
 
 .drawer.open {
@@ -65,6 +68,11 @@
   justify-content: center;
 }
 
+.cartDrawerItemContainer {
+    overflow-y: auto;
+    max-height: 75rem;
+}
+
 .cartDrawerItem {
     display: flex;
     gap: 1rem;
@@ -76,6 +84,13 @@
     font-size: 1.2rem;
     font-weight: 600;
     border-bottom: 1px solid var(--black-bean);
+    max-width: 120px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
 }
 
 .cartDrawerItemDescription {
@@ -94,4 +109,26 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
+}
+
+.cartDrawerFooter {
+    text-align: center;
+    margin-top: 1rem;
+}
+
+.cartDrawerItemPrice {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.cartDrawerItemRemoveButton {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
