--- a/frontend/src/components/Card/ProductCard/ProductCard.module.css
+++ b/frontend/src/components/Card/ProductCard/ProductCard.module.css
@@ -33,3 +33,14 @@
     font-size: 1rem;
     font-weight: 500;
 }
+
+.itemQuantity {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1rem;
+    background-color: var(--vanilla-cream);
+    padding: 0.25rem 0.625rem;
+    border-radius: 10px;
+    font-weight: 600;
+}
