--- a/frontend/src/components/Banner/Banner.module.css
+++ b/frontend/src/components/Banner/Banner.module.css
@@ -3,7 +3,6 @@
     border-radius: 35px;
     padding: 2.5rem;
     margin: 2rem 0;
-    background-image: url('src/assets/products_banner.svg');
     background-size: cover;
     background-position: center;
     overflow: hidden;
@@ -36,4 +35,32 @@
     font-size: 1.2rem;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
     font-weight: 600;
+}
+
+.bannerBar {
+    display: flex;
+    align-items: center;
+    padding: 0 2rem;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 4rem;
+    background-color: #8F9574;
+    border-bottom-left-radius: 35px;
+    border-bottom-right-radius: 35px;
+    z-index: 2;
+}
+
+.bannerBarInput {
+    border: none;
+    outline: none;
+    padding: 0.5rem;
+    font-size: 1.2rem;
+    width: 37rem;
+    background-color: var(--misty-milk);
+    font-weight: 400;
+    border-radius: 0.5rem;
+    
 }
