--- a/frontend/src/pages/Profile/Profile.module.css
+++ b/frontend/src/pages/Profile/Profile.module.css
@@ -54,3 +54,14 @@
     overflow-y: auto;
     max-height: 300px;
 }
+
+.profileDescriptionTextarea {
+    width: 100%;
+    height: 10rem;
+    border: none;
+    outline: none;
+    resize: none;
+    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
+    padding: 0.5rem;
+}
