--- a/frontend/src/components/CoffeeShopUnit/CoffeeShopUnit.module.css
+++ b/frontend/src/components/CoffeeShopUnit/CoffeeShopUnit.module.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    min-width: 400px;
+    min-width: 450px;
 }
 
 .coffeeShopsUnitInfoTitle {
@@ -32,6 +32,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 0.2s ease;
+}
+
+.iconMock:hover {
+    background-color: var(--latte-caramelo);
+    transform: scale(1.05);
+}
+
+.iconMock:active {
+    transform: scale(0.95);
 }
 
 .iconContainer {
