fix: ajusta redirecionamento nas informações das unidades de cafeterias

--- a/frontend/src/components/CoffeeShopUnit/CoffeeShopUnit.module.css
+++ b/frontend/src/components/CoffeeShopUnit/CoffeeShopUnit.module.css
@@ -21,8 +21,14 @@
 
 .coffeeShopsUnitInfoMoreInfo {
     font-size: 0.9rem;
-    color: var(--matcha-leaf);
     font-weight: 700;
+    text-decoration: none;
+    color: var(--matcha-leaf);
+}
+
+.coffeeShopsUnitInfoMoreInfo a {
+    text-decoration: none;
+    color: var(--matcha-leaf);
 }
 
 .iconMock {
